[gd_scene load_steps=9 format=2]

[ext_resource path="res://Actors/NPC.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/CharacterAssets/bandit v1.png" type="Texture" id=2]
[ext_resource path="res://Actors/Bandit/Bandit.gd" type="Script" id=3]
[ext_resource path="res://Actors/Movement.tres" type="Resource" id=4]
[ext_resource path="res://Actors/Zones/DetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Zones/AttackPivot.tscn" type="PackedScene" id=6]
[ext_resource path="res://Weapons/LongSword.tres" type="Resource" id=10]

[sub_resource type="Animation" id=1]
resource_name = "MeleeAttack"
length = 0.5
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "switchToChase"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackPivot/Swipe:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.41, 0.42, 0.43, 0.44, 0.45, 0.46, 0.47, 0.48, 0.49, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackPivot/WeaponHitbox/WeaponCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.42, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AttackPivot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.1 ],
"method": "startAttack"
} ]
}

[node name="Bandit" instance=ExtResource( 1 )]
script = ExtResource( 3 )
movementResource = ExtResource( 4 )

[node name="Sprite" parent="." index="1"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="Stats" parent="." index="3"]
maxHealth = 5

[node name="DetectionZone" parent="." index="4" instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
visible = false

[node name="AttackPivot" parent="." index="5" instance=ExtResource( 6 )]

[node name="WeaponHitbox" parent="AttackPivot" index="0"]
weaponStatsResource = ExtResource( 10 )

[node name="Swipe" parent="AttackPivot" index="1"]
frame = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
anims/MeleeAttack = SubResource( 1 )

[editable path="DetectionZone"]

[editable path="AttackPivot"]
